Unify application status
