# app/controllers/api/v1/participants_controller.rb
@@ -7,7 +7,7 @@ module API
       before_action :check_participant_id_change, only: :show
 
       def index
-        conditions = { updated_since:, training_status:, from_participant_id:, sort: }
+        conditions = { updated_since:, status:, from_participant_id:, sort: }
         participants = participants_query(conditions:).participants
 
         render json: to_json(paginate(participants))
@@ -19,8 +19,8 @@ module API
 
     private
 
-      def training_status
-        participant_params.dig(:filter, :training_status)
+      def status
+        participant_params.dig(:filter, :status)
       end
 
       def from_participant_id
@@ -37,7 +37,7 @@ module API
       end
 
       def participant_params
-        params.permit(:ecf_id, :sort, filter: %i[training_status from_participant_id])
+        params.permit(:ecf_id, :sort, filter: %i[status from_participant_id])
       end
 
       def to_json(obj)
