# app/serializers/assurance_reports/csv_serializer.rb
@@ -36,8 +36,8 @@ class AssuranceReports::CsvSerializer
       "Lead Provider Name",
       "School Urn",
       "School Name",
-      "Training Status",
-      "Training Status Reason",
+      "Status",
+      "Status Reason",
       "Declaration ID",
       "Declaration Status",
       "Declaration Type",
@@ -66,8 +66,8 @@ private
       record.lead_provider_name,
       record.school_urn,
       record.school_name,
-      record.training_status,
-      record.training_status_reason,
+      record.status,
+      record.status_reason,
       record.declaration_id,
       record.declaration_status,
       record.declaration_type,
